force-app/main/default/objects/Data_Upload_Line_Item__c/Data_Upload_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Data Upload Line Item</label>
    <nameField>
        <displayFormat>DUL-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Upload Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>