force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Contact_FirstName__c</fullName>
    <label>Contact FirstName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>