force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>Contact_LastName__c</fullName>
    <label>Contact LastName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>