force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <label>Contact Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>