force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Career Services</fullName>
            </value>
            <value>
                <fullName>Dean</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>