force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Contributor__c.field-meta.xml
<CustomField>
    <fullName>Contributor__c</fullName>
    <label>Contributor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>