force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Data_Upload__c.field-meta.xml
<CustomField>
    <fullName>Data_Upload__c</fullName>
    <label>Data Upload</label>
    <referenceTo>Data_Upload__c</referenceTo>
    <relationshipLabel>Data Upload Line Items</relationshipLabel>
    <relationshipName>Data_Upload_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>