force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Diversity_Organization_Detail__c.field-meta.xml
<CustomField>
    <fullName>Diversity_Organization_Detail__c</fullName>
    <label>Diversity Organization Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>