force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>This field holds the error message for the record insertion</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>