force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <label>Executive Sponsor</label>
    <length>100</length>
    <type>Text</type>
</CustomField>