force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Loc_Number_of_Hires__c.field-meta.xml
<CustomField>
    <fullName>Loc_Number_of_Hires__c</fullName>
    <label>Loc Number of Hires</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>