force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Loc_Size_of_Candidate_Pool__c.field-meta.xml
<CustomField>
    <fullName>Loc_Size_of_Candidate_Pool__c</fullName>
    <label>Loc Size of Candidate Pool</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>