force-app/main/default/objects/Data_Upload_Line_Item__c/fields/MailAddress__c.field-meta.xml
<CustomField>
    <fullName>MailAddress__c</fullName>
    <label>MailAddress</label>
    <type>Address</type>
</CustomField>