force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Organization_Category__c.field-meta.xml
<CustomField>
    <fullName>Organization_Category__c</fullName>
    <label>Organization Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>