force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Organization_Status__c.field-meta.xml
<CustomField>
    <fullName>Organization_Status__c</fullName>
    <label>Organization Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
            </value>
            <value>
                <fullName>Qualified Partner</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>Archive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>