force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <label>Parent Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>