force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Partnership_Owner__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Owner__c</fullName>
    <label>Partnership Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>