force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Recruiting_Source__c.field-meta.xml
<CustomField>
    <fullName>Recruiting_Source__c</fullName>
    <label>Recruiting Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>