force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Salutation__c.field-meta.xml
<CustomField>
    <fullName>Salutation__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mr</fullName>
            </value>
            <value>
                <fullName>Ms</fullName>
            </value>
            <value>
                <fullName>Mrs</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
            </value>
            <value>
                <fullName>Mx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>