force-app/main/default/objects/Data_Upload_Line_Item__c/fields/Type_2__c.field-meta.xml
<CustomField>
    <fullName>Type_2__c</fullName>
    <label>Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Cell</fullName>
            </value>
            <value>
                <fullName>Ext</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>